Fix layout issue

--- a/src/app.css
+++ b/src/app.css
@@ -15,4 +15,5 @@ body {
 .app > * {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
